# mosaic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PR.md  README.md  _quarto-full.yml  _quarto-pr.yml  _quarto.yml  cliff.toml  issues.md  pr.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  quarto-pr-preview.yml
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml  bug.yml  config.yml  new-solver.yml
.github/scripts/: cleanup-ghcr-tags.sh  detect-changed-problems.py  detect-changed-solvers.py  detect-reference-solvers.py  expand-solver-list.py  fetch-artifact.sh  filter-problems-by-solver.py  generate-benchmark-matrix.py  intersect-solvers.py  merge-results.py  overlay-results.py  post-commit-status.sh  post-status-comment.sh  pull-solver-images.py  rtd-pending-badge.sh  rtd-preview-url.sh  rtd-serve-site.sh  rtd-trigger.sh  tesseract-config-field.py  validate-problem-configs.py  validate-tesseract-configs.py
.github/workflows/: benchmark-execute.yml  benchmark-run.yml  benchmark.yml  build-tesseracts.yml  bump_lockfile.yml  ci.yml  cla.yml  cleanup-ghcr.yml  cleanup-pr-previews.yml  conventional-pr-linter.yml  docs-publish.yml  docs.yml  get_bump_type.sh  pre-commit-cron-updater.yml  publish-results.yml  publish.yml  release-benchmark.yml  release.yml
docs/: architecture.qmd  contributing.qmd  generate.py  generate_results.py  getting-started.qmd  index.qmd  internals.qmd  results.qmd  results_ns_3d_grid.qmd  results_ns_grid.qmd  results_structural_mesh.qmd  results_thermal_mesh.qmd  solvers.qmd  sortable-tables.html  standalone.qmd  styles.scss  tutorial-add-domain.qmd  tutorial-add-solver.qmd  tutorial.qmd
main/: snapshot.json  status-report.md
mosaic/: __init__.py  _version.py
mosaic/benchmarks/: cli.py  code_ratio.py
mosaic/benchmarks/cli/: __init__.py  __main__.py  _helpers.py  _status_helpers.py  build.py  ics.py  paper_plots.py  reference.py  run.py  status.py  templates.py  tesseracts.py  timing_report.py
mosaic/benchmarks/core/: __init__.py  cell_filter.py  code_ratio.py  config.py  console.py  exceptions.py  experiment.py  hardware.py  harness.py  introspect.py  io.py  memory.py  partial.py  reference.py  resources.py  results.py  runner.py  status.py  status_checks.py  tracer_apply.py  utils.py  watchdog.py
mosaic/benchmarks/plots/: __init__.py  cost.py  forward.py  gradient.py  ics.py  optimization.py  style.py
mosaic/benchmarks/problems/: __init__.py  navier_stokes_3d_grid.py  navier_stokes_grid.py  structural_mesh.py  thermal_mesh.py
mosaic/benchmarks/shared/: cost.py  forward.py  ics.py  optimization.py
mosaic/benchmarks/suites/: __init__.py  cost.py  forward.py  gradient.py  ics.py  optimization.py
mosaic/mosaic_shared/: __init__.py  pyproject.toml  schema_types.py  types.py
mosaic/mosaic_shared/problems/navier_stokes_grid/: __init__.py  drag.py  grid_fluid.py  ns_solver.jl  schemas.py  waterlily_solver.jl
mosaic/mosaic_shared/problems/structural_mesh/: __init__.py  schemas.py  topopt_solver.jl
mosaic/mosaic_shared/problems/thermal_mesh/: __init__.py  schemas.py
mosaic/mosaic_shared/utils/: comparisons.py  sdf.py
mosaic/templates/: __init__.py  ns-periodic.yaml  scaffold.py  structural-steady.yaml  thermal-steady.yaml
mosaic/tesseracts/structural-mesh/dealii-structural/: CMakeLists.txt  build_base.sh  tesseract_api.py  tesseract_config.yaml  tesseract_environment.yaml
mosaic/tesseracts/structural-mesh/dealii-structural/src/: cnpy.cpp  cnpy.h  struct_solver.cpp
mosaic/tesseracts/tesseract_shared/: __init__.py  pyproject.toml  types.py
mosaic/tesseracts/tesseract_shared/problems/: __init__.py
mosaic/tesseracts/tesseract_shared/problems/navier_stokes_grid/: __init__.py  grid_fluid.py  schemas.py
mosaic/tesseracts/tesseract_shared/problems/structural_mesh/: __init__.py  schemas.py
mosaic/tesseracts/tesseract_shared/problems/thermal_mesh/: schemas.py
mosaic/tesseracts/tesseract_shared/utils/: comparisons.py  plotting.py  sdf.py
mosaic/tesseracts/thermal-mesh/dealii-heat/: CMakeLists.txt  build_base.sh  tesseract_api.py  tesseract_config.yaml  tesseract_environment.yaml  tesseract_requirements.txt
mosaic/tesseracts/thermal-mesh/dealii-heat/src/: cnpy.cpp  cnpy.h  heat_solver.cpp
mosaic/tests/: test_cli_handlers.py  test_cli_smoke.py  test_docs_generate.py  test_dummy_integration.py  test_integration.py  test_plots_only.py  test_problem_configs.py  test_scaffold.py  test_schemas.py  test_shared_utils.py  test_status_pipeline.py  test_utils.py
mosaic/tests/core/: test_cell_filter.py  test_continue.py  test_coords.py  test_exclusions.py  test_goals.py  test_harness.py  test_harness_hash.py  test_partial.py  test_plot_views.py  test_runner.py  test_staleness_roundtrip.py  test_status.py  test_sweep_cache.py  test_sweep_plot.py
mosaic/tests/tesseract_watchdog/: test_watchdog.py
mosaic/tests/tracer_apply/: test_tracer_apply.py
pr-preview/pr-50/: index.html  search.json
pr-preview/pr-50/docs/: getting-started.html  index.html  internals.html  results_ns_3d_grid.html  results_ns_grid.html  results_structural_mesh.html  results_thermal_mesh.html  solvers.html  standalone.html  (+1 more)
pr-preview/pr-59/: search.json
pr-preview/pr-61/: search.json
pr-preview/pr-63/: search.json
tests/: test_cli_handlers.py  test_cli_helpers.py  test_cli_smoke.py  test_docs_generate.py  test_dummy_integration.py  test_integration.py  test_plots_only.py  test_problem_configs.py  test_scaffold.py  test_schemas.py  test_shared_plotting.py  test_shared_utils.py  test_status_pipeline.py  test_timing_report.py  test_utils.py
tests/core/: test_cell_filter.py  test_continue.py  test_coords.py  test_error_truncation.py  test_exclusions.py  test_harness.py  test_harness_hash.py  test_json_encoder.py  test_npz_merge.py  test_partial.py  test_plot_views.py  test_reference.py  test_runner.py  test_save_json_atomicity.py  test_staleness_roundtrip.py  test_status.py  test_sweep_plot.py  test_trimmed_mean.py
tests/tracer_apply/: test_tracer_apply.py
(+456 files in other folders)
