[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tesseract-shared"
version = "0.1.0"
description = "Shared types and utilities for Mosaic tesseracts"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic",
    "tesseract-core[runtime]",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["tesseract_shared", "tesseract_shared.*"]

[tool.setuptools.package-data]
"tesseract_shared.problems.navier_stokes_grid" = ["*.jl"]
"tesseract_shared.problems.structural_mesh" = ["*.jl"]
